Fixed team card page overlap (#69)

--- a/src/styles/OurTeamPage.module.less
+++ b/src/styles/OurTeamPage.module.less
@@ -6,7 +6,7 @@
 }
 
 .teampagedivider {
-    border-top: 9px solid @primary-color;
+  border-top: 9px solid @primary-color;
 }
 
 .myteamtitle {
@@ -32,16 +32,20 @@
 }
 
 .ourteampage_text {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  flex-shrink: 0;
-  width: 70%;
   > h3 {
     color: @primary-color;
   }
   > span {
     color: #373737;
+  }
+}
+
+@media screen and (max-width: @mobile-cutoff) {
+  .ourteampage_text {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    flex-shrink: 0;
   }
 }
 
@@ -53,6 +57,7 @@
   grid-auto-columns: 20%;
   grid-auto-flow: row;
   grid-template-columns: 50% 50%;
+  padding-right: 3%;
 }
 
 .ourteamtabs {
